seedboxk8s/applications/tautulli/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: tortuga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
        - image: ghcr.io/tautulli/tautulli
          name: tautulli
          ports:
            - containerPort: 8181
          volumeMounts:
            - mountPath: /config
              name: tautulli-config-pvc
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: tautulli-config-pvc
          persistentVolumeClaim:
            claimName: tautulli-config-pvc
