seedboxk8s/applications/tautulli/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli
  namespace: tortuga
spec:
  replicas: 1
  serviceName: tautulli
  selector:
    matchLabels:
      app.kubernetes.io/name: tautulli
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tautulli
    spec:
      securityContext:
        fsGroup: ${plexGid}
      containers:
        - image: ghcr.io/tautulli/tautulli:v2.18.2@sha256:1b5875fe3193d450a62e7b438eb6701195c841f14f3dcb962e545eda42d3696f
          name: tautulli
          ports:
            - containerPort: 8181
          volumeMounts:
            - mountPath: /config
              name: tautulli-config-pvc
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: tautulli-config-pvc
          persistentVolumeClaim:
            claimName: tautulli-config-pvc
