seedboxk8s/applications/tautulli/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: tortuga
spec:
  selector:
    app.kubernetes.io/name: tautulli
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8181
