seedboxk8s/applications/tautulli/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli
  namespace: tortuga
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Tautulli
    gethomepage.dev/group: Media
    gethomepage.dev/icon: tautulli
    gethomepage.dev/href: https://tautulli.${productionClusterFqdn}
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`tautulli.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: tautulli
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
